Added everything together with CircleCi config

--- a/deploy/ansible/roles/webserver/files/dev/httpd/httpd.conf
+++ b/deploy/ansible/roles/webserver/files/dev/httpd/httpd.conf
@@ -85,7 +85,14 @@ IncludeOptional conf.d/*.conf
 # The one and only VirtualHost
 NameVirtualHost *:80
 
+# API Server, kind'a layer between DB and Client
 <VirtualHost *:80>
     DocumentRoot /var/www/application/public
+    ServerName  api.majorproject.dev
+</VirtualHost>
+
+# Web Client -> has index.html, Angular2, css, etc. Does calls to API
+<VirtualHost *:80>
+    DocumentRoot /var/www/app-client/web
     ServerName  majorproject.dev
 </VirtualHost>
