--- a/application/composer.json
+++ b/application/composer.json
@@ -22,7 +22,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "App/"
         }
     },
     "autoload-dev": {
