Fixed working dir in composer dependencies

--- a/deploy/ansible/roles/webserver/tasks/composer.yml
+++ b/deploy/ansible/roles/webserver/tasks/composer.yml
@@ -2,5 +2,7 @@
 - name: Install Composer globally
   shell: "curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/bin --filename=composer"
 
-- name: Install composer dependencies
-  composer: command=install working_dir=/var/www/application
+- name: Install project's composer dependencies
+  composer:
+    command=install
+    working_dir=/var/www/
