Changed DB name to majorporject

--- a/application/.env
+++ b/application/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=IJjTbKUGY6UeEJsJ1W9xzOjUR0OkbhUd
 
 DB_HOST=localhost
-DB_DATABASE=sae_portal
+DB_DATABASE=majorproject
 DB_USERNAME=root
 DB_PASSWORD=
 
