--- a/application/.env
+++ b/application/.env
@@ -1,17 +1,22 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=IJjTbKUGY6UeEJsJ1W9xzOjUR0OkbhUd
+APP_LOG_LEVEL=debug
+APP_URL=http://api.mjp.dev
 
+DB_CONNECTION=mysql
 DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=majorproject
 DB_USERNAME=root
 DB_PASSWORD=
 
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=localhost
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -21,3 +26,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
