--- a/application/composer.json
+++ b/application/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-cors": "^0.8.0",
         "predis/predis": "^1.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "laravel/passport": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
