--- a/application/composer.json
+++ b/application/composer.json
@@ -18,8 +18,9 @@
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "phing/phing": "^2.14",
-        "friendsofphp/php-cs-fixer": "^1.11",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "phpro/grumphp": "^0.9.6",
+        "squizlabs/php_codesniffer": "^2.7"
     },
     "autoload": {
         "classmap": [
