--- a/application/grumphp.yml
+++ b/application/grumphp.yml
@@ -1,10 +1,52 @@
 parameters:
-    git_dir: ../
+    git_dir: .
     bin_dir: vendor/bin
     tasks:
+        composer:
+            file: ./composer.json
+            no_check_all: false
+            no_check_lock: false
+            no_check_publish: false
+            no_local_repository: false
+            with_dependencies: false
+            strict: false
+
+        git_conflict: ~
+
+        git_blacklist:
+            keywords:
+                - "die("
+                - "var_dump("
+                - "dd("
+                - "dump("
+                - "exit;"
+            triggered_by: [php]
+
+        phpcpd:
+            directory: '.'
+            exclude: ['vendor', 'tests', 'database', 'resources', 'bootstrap']
+            fuzzy: false
+            min_lines: 5
+            min_tokens: 70
+            triggered_by: ['php']
+
         phpcs:
-            standard: 'PSR2'
-            ignore_patterns: ['vendor', 'tests', 'storage', 'resources', 'database', 'bootstrap']
+            standard: PSR2
+            show_warnings: true
+            tab_width: ~
+            encoding: ~
+            ignore_patterns: ['vendor', 'tests', 'database', 'resources', 'bootstrap']
+            sniffs: []
+            triggered_by: [php]
 
         phpunit:
+            config_file: ~
+            group: []
             always_execute: false
+
+        securitychecker:
+            lockfile: ./composer.lock
+            format: ~
+            end_point: ~
+            timeout: ~
+            run_always: false
