Git: added files to ignore

--- a/application/.gitignore
+++ b/application/.gitignore
@@ -73,3 +73,6 @@ crashlytics.properties
 crashlytics-build.properties
 
 # Created by .ignore support plugin (hsz.mobi)
+
+.phpstorm.meta.php
+_ide_helper.php
