--- a/application/composer.json
+++ b/application/composer.json
@@ -20,7 +20,8 @@
         "phing/phing": "^2.14",
         "fzaninotto/faker": "^1.6",
         "phpro/grumphp": "^0.9.6",
-        "squizlabs/php_codesniffer": "^2.7"
+        "squizlabs/php_codesniffer": "^2.7",
+        "barryvdh/laravel-ide-helper": "^2.2"
     },
     "autoload": {
         "classmap": [
@@ -51,6 +52,8 @@
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta",
             "php artisan optimize"
         ]
     },
