--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
     <target name="lint:php:syntax" description="Check for syntax errors in PHP files">
         <phplint>
             <fileset dir="${project.basedir}">
+                <exclude name="vendor"/>
                 <include name="**/*.php"/>
             </fileset>
         </phplint>
