--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=IJjTbKUGY6UeEJsJ1W9xzOjUR0OkbhUd
 APP_LOG_LEVEL=debug
-APP_URL=http://api.mjp.dev
+APP_URL=http://api.mjp.test
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -12,9 +12,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
