--- a/deploy/ansible/roles/webserver/tasks/composer.yml
+++ b/deploy/ansible/roles/webserver/tasks/composer.yml
@@ -1,11 +1,29 @@
----
-- name: Install composer
+- name: download composer
   get_url:
-    url=https://getcomposer.org/composer.phar
-    dest=/usr/local/bin/composer
-    mode=0755
+    url: https://getcomposer.org/installer
+    dest: /tmp/installer
+  tags: composer
+
+- name: install composer
+  shell: cat /tmp/installer | php -- --install-dir=/usr/local/bin
+  args:
+    creates: /usr/local/bin/composer
+  tags: composer
+
+- name: rename composer.phar to composer
+  shell: mv /usr/local/bin/composer.phar /usr/local/bin/composer
+  args:
+    creates: /usr/local/bin/composer
+  tags: composer
+
+- name: make composer executable
+  file:
+    path: /usr/local/bin/composer
+    mode: a+x
+    state: file
 
 - name: Install project's composer dependencies
+  sudo: false
   composer:
-    command=install
-    working_dir=/var/www/
+    command: install
+    working_dir: /var/www/
