--- a/deploy/ansible/roles/webserver/tasks/mysql_setup.yml
+++ b/deploy/ansible/roles/webserver/tasks/mysql_setup.yml
@@ -6,10 +6,14 @@
 #  action: mysql_user user="" host="{{ ansible_nodename }}" state="absent"
 
 - name: "MySQL: delete anonymous user for localhost"
-  action: mysql_user user="" state="absent"
+  mysql_user:
+    name: ""
+    state: absent
 
 - name: "MySQL: remove the test database"
-  action: mysql_db db=test state=absent
+  mysql_db:
+    name: "test"
+    state: absent
 
 # 'localhost' needs to be the last item for idempotency, see
 # http://ansible.cc/docs/modules.html#mysql-user
@@ -29,5 +33,10 @@
 - name: Remove existing InnoDB log files
   file: path=/var/lib/mysql/{{ item }} state=absent
   with_items:
-  - ib_logfile0
-  - ib_logfile1
+    - ib_logfile0
+    - ib_logfile1
+
+- name: Create project DB
+  mysql_db:
+    name: "majorproject"
+    state: present
